--- a/src/AppBundle/Resources/views/store/inventory.html.twig
+++ b/src/AppBundle/Resources/views/store/inventory.html.twig
@@ -33,7 +33,7 @@
                                 {% verbatim %}
                                 <tr ng-repeat="row in collectionsCollection">
                                     <td ng-cloak>{{ row.Name }}</td>
-                                    <td class="text-center"><i class="fa fa-fw fa-paperclip" ng-if="row.Attachments"></i></td>
+                                    <td class="text-center"><i class="fa fa-fw fa-paperclip" ng-if="row.Attachments.length"></i></td>
                                     <td>
                                         <div class="pull-right">
                                             <button type="button" ng-click="showCollection(row.Id, 'inventoryInfo')"
