--- a/src/AppBundle/Resources/views/store/sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/sensors.html.twig
@@ -66,7 +66,10 @@
                                                                     {{ isensor.Temperature | number: 2 }} °C
                                                                 </div>
                                                                 <div ng-switch-when="4" ng-cloak>
-                                                                    <div class="label label-success">
+                                                                    <div class="label label-danger" ng-if="isensor.SwitchWhen == isensor.SwitchState">
+                                                                        {{ 'NO' | translate }}
+                                                                    </div>
+                                                                    <div class="label label-success" ng-if="isensor.SwitchWhen != isensor.SwitchState">
                                                                         {{ 'YES' | translate }}
                                                                     </div>
                                                                 </div>
