Added Beer tech group in admin & user side.

--- a/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
+++ b/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
@@ -126,6 +126,12 @@
                                 <i class="fa fa-fw fa-book fa-2x menu-icon"></i> <a ng-href="{{ path('administration_maintenance_log') }}" class="menu-item" ng-cloak>{{ mc.translate('MAINTENANCE.LOG') }}</a>
                             </div>
                         </div>
+                        <div class="menu-separator"></div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <i class="fa fa-fw fa-beer fa-2x menu-icon"></i> <a ng-href="{{ path('administration_beertech') }}" class="menu-item" ng-cloak>{{ mc.translate('BEER_TECH.LABEL') }}</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
