--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -53,6 +53,7 @@
                             <li><a href="{{ path('administration_maintenance_general') }}" ng-cloak> {{ mc.translate('MAINTENANCE.GENERAL') }} </a></li>
                             <li><a href="{{ path('administration_maintenance_periodically') }}" ng-cloak> {{ mc.translate('MAINTENANCE.PERIODICALLY') }} </a></li>
                             <li><a href="{{ path('administration_maintenance_log') }}" ng-cloak> {{ mc.translate('MAINTENANCE.LOG') }} </a></li>
+                            <li><a href="{{ path('administration_beertech') }}" ng-cloak> {{ mc.translate('BEER_TECH.LABEL') }} </a></li>
                         </ul>
                     </li>
 
