--- a/src/AppBundle/Resources/views/store/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/store/dashboard.html.twig
@@ -95,6 +95,22 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
+            <div class="panel panel-default cursor-pointer" ng-click="showBeerTech()">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-2 text-center big-button-icon">
+                            <i class="fa fa-beer fa-5x fa-fw"></i>
+                        </div>
+                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
+                            {{ mc.translate('BEER_TECH.LABEL') }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-12 col-lg-12">
             <div class="panel panel-warning cursor-pointer" ng-click="showMaintenance()">
                 <div class="panel-heading">
                     <div class="row">
