Maintenance in separate page, also localstorage for sub pages.

--- a/src/AppBundle/Resources/views/store/maintenance_dashboard.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance_dashboard.html.twig
@@ -33,75 +33,9 @@
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-map-marker fa-5x fa-fw"></i>
-                        </div>
-                        <div class="col-xs-10 text-center big-button-text" style="font-size: 30px;" ng-cloak>
-                            {% verbatim %}
-                                {{ stores.store().Name }}
-                            {% endverbatim %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-green cursor-pointer" ng-click="showInformation()">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-info-circle fa-5x fa-fw"></i>
-                        </div>
-                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ mc.translate('STORE.INFORMATION') }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-success cursor-pointer" ng-click="showInventory()">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-list fa-5x fa-fw"></i>
-                        </div>
-                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ mc.translate('INVENTORY.LABEL') }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div ng-if="!stores.store().IsMaintenance" class="row">
-        <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-primary cursor-pointer" ng-click="showSensors()">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-thermometer-half fa-5x fa-fw"></i>
-                        </div>
-                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ mc.translate('SENSOR.SENSORS') }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-warning cursor-pointer" ng-click="showMaintenance()">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-2 text-center big-button-icon">
                             <i class="fa fa-wrench fa-5x fa-fw"></i>
                         </div>
-                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
+                        <div class="col-xs-10 text-center big-button-text" style="font-size: 30px;" ng-cloak>
                             {{ mc.translate('MAINTENANCE.LABEL') }}
                         </div>
                     </div>
@@ -109,23 +43,16 @@
             </div>
         </div>
     </div>
-    <div ng-if="!stores.store().IsMaintenance" class="row">
+    <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-yellow cursor-pointer" ng-click="showNotifications()">
+            <div class="panel panel-primary cursor-pointer" ng-click="showPeriodicMaintenance()">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-2 text-center big-button-icon">
-                            <i class="fa fa-warning fa-5x fa-fw"></i>
+                            <i class="fa fa-clock-o fa-5x fa-fw"></i>
                         </div>
-                        <div class="col-xs-2 text-center big-button-badge">
-                            <span class="btn btn-default btn-circle" ng-cloak>
-                                {% verbatim %}
-                                {{ stores.store().Notifications.Count }}
-                                {% endverbatim %}
-                            </span>
-                        </div>
-                        <div class="col-xs-8 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ mc.translate('NOTIFICATIONS.LABEL') }}
+                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
+                            {{ mc.translate('MAINTENANCE.PERIODICALLY') }}
                         </div>
                     </div>
                 </div>
@@ -134,7 +61,23 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-info cursor-pointer" ng-click="pageBack()">
+            <div class="panel panel-warning cursor-pointer" ng-click="showBeerTech()">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-2 text-center big-button-icon">
+                            <i class="fa fa-beer fa-5x fa-fw"></i>
+                        </div>
+                        <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
+                            {{ mc.translate('BEER_TECH.LABEL') }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-12 col-lg-12">
+            <div class="panel panel-info cursor-pointer" ng-click="showDashboard()">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
