--- a/src/AppBundle/Resources/views/store/maintenance_info.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance_info.html.twig
@@ -4,7 +4,7 @@
 
     {# Maintenance information #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-wrench"></i> {{ mc.translate('MAINTENANCE.LABEL') }} {{ mc.translate('MAINTENANCE.FOR') }} {{ store.Name }}
+        <i class="fa fa-fw fa-clock-o"></i> {{ mc.translate('MAINTENANCE.LABEL') }} {{ mc.translate('MAINTENANCE.FOR') }} {{ store.Name }}
     </h5>
     <div class="well">
         {% verbatim %}
