--- a/src/AppBundle/Resources/views/store/beertech.html.twig
+++ b/src/AppBundle/Resources/views/store/beertech.html.twig
@@ -60,7 +60,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-info cursor-pointer" ng-click="pageBack()">
+            <div class="panel panel-info cursor-pointer" ng-click="pageBack('maintenance')">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-12 text-left big-button-text" ng-cloak>
