--- a/src/AppBundle/Resources/views/store/maintenance.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="panel-body">
             <h4 ng-cloak>
-                <i class="fa fa-fw fa-wrench"></i> {{ mc.translate('MAINTENANCE.LABEL') }} {{ mc.translate('MAINTENANCE.FOR') }} {{ store.Name }}
+                <i class="fa fa-fw fa-clock-o"></i> {{ mc.translate('MAINTENANCE.LABEL') }} {{ mc.translate('MAINTENANCE.FOR') }} {{ store.Name }}
             </h4>
             <hr/>
             <div class="well table-responsive">
@@ -66,7 +66,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-info cursor-pointer" ng-click="pageBack()">
+            <div class="panel panel-info cursor-pointer" ng-click="pageBack('maintenance')">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-12 text-left big-button-text" ng-cloak>
