--- a/src/AppBundle/Resources/views/store/store.html.twig
+++ b/src/AppBundle/Resources/views/store/store.html.twig
@@ -14,6 +14,9 @@
                     <div ng-switch-when="dashboard">
                         {% include 'AppBundle:store:dashboard.html.twig' %}
                     </div>
+                    <div ng-switch-when="maintenance">
+                        {% include 'AppBundle:store:maintenance_dashboard.html.twig' %}
+                    </div>
                     <div ng-switch-when="information">
                         {% include 'AppBundle:store:information.html.twig' %}
                     </div>
