--- a/src/AdministrationBundle/Resources/views/beertech/beertech.html.twig
+++ b/src/AdministrationBundle/Resources/views/beertech/beertech.html.twig
@@ -21,11 +21,15 @@
                             <table class="table table-striped table-bordered">
                                 <thead>
                                 <tr>
-                                    <th st-sort="Name" class="st-sortable col-md-7 col-xs-5"
+                                    <th st-sort="Date.date" class="st-sortable col-md-2 col-xs-2"
+                                        ng-cloak>{{ mc.translate('COLLECTIONS.DATE') }}</th>
+                                    <th st-sort="CreatedBy.Name" class="st-sortable col-md-2 col-xs-2"
+                                        ng-cloak>{{ mc.translate('COLLECTIONS.NAME') }}</th>
+                                    <th st-sort="Name" class="st-sortable col-md-3 col-xs-3"
                                         ng-cloak>{{ mc.translate('COLLECTIONS.DESCRIPTION') }}</th>
-                                    <th st-sort="Attachments" class="st-sortable col-md-1 col-xs-2 text-center"
+                                    <th st-sort="Attachments" class="st-sortable col-md-1 col-xs-1 text-center"
                                         ng-cloak><i class="fa fa-fw fa-paperclip"></i></th>
-                                    <th st-sort="IsPublished" class="st-sortable text-right col-md-1 col-xs-2"
+                                    <th st-sort="IsPublished" class="st-sortable text-right col-md-2 col-xs-2"
                                         ng-cloak>{{ mc.translate('COLLECTIONS.PUBLISHED') }}</th>
                                     <th class="st-nosort text-right col-md-2 col-xs-2"
                                         ng-cloak>{{ mc.translate('ACTION') }}</th>
@@ -34,6 +38,8 @@
                                 <tbody>
                                 {% verbatim %}
                                 <tr ng-repeat="row in collectionsCollection">
+                                    <td ng-cloak>{{ row.Date.date | GMT:'DD-MM-YYYY HH:mm' }}</td>
+                                    <td ng-cloak>{{ row.CreatedBy.Name }}</td>
                                     <td ng-cloak>{{ row.Name }}</td>
                                     <td class="text-center"><i class="fa fa-fw fa-paperclip" ng-if="row.Attachments.length"></i></td>
                                     <td ng-cloak class="text-right">
@@ -59,9 +65,9 @@
                                 </tr>
                                 {% endverbatim %}
                                 </tbody>
-                                <tfoot ng-show="collectionsCollection.length > 10">
+                                <tfoot ng-show="collections.collections().length > 10">
                                 <tr>
-                                    <td class="text-center" st-pagination="" st-items-by-page="10" colspan="5">
+                                    <td class="text-center" st-pagination="" st-items-by-page="10" colspan="6">
                                     </td>
                                 </tr>
                                 </tfoot>
