--- a/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
@@ -119,7 +119,7 @@
     </h5>
     <div class="well">
         {% verbatim %}
-        <ng-dropzone id="collectionDropzone" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
+        <ng-dropzone ng-if="dzShow" id="collectionDropzone" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
         {% endverbatim %}
     </div>
 
