--- a/src/AppBundle/Resources/views/store/beertech.html.twig
+++ b/src/AppBundle/Resources/views/store/beertech.html.twig
@@ -21,19 +21,31 @@
                             <table class="table table-striped table-bordered">
                                 <thead>
                                 <tr>
-                                    <th st-sort="Name" class="st-sortable col-md-9 col-xs-7"
+                                    <th st-sort="Date.date" class="st-sortable col-md-2 col-xs-2"
+                                        ng-cloak>{{ mc.translate('COLLECTIONS.DATE') }}</th>
+                                    <th st-sort="CreatedBy.Name" class="st-sortable col-md-2 col-xs-2"
+                                        ng-cloak>{{ mc.translate('COLLECTIONS.NAME') }}</th>
+                                    <th st-sort="Name" class="st-sortable col-md-3 col-xs-3"
                                         ng-cloak>{{ mc.translate('COLLECTIONS.DESCRIPTION') }}</th>
-                                    <th st-sort="Attachments" class="st-sortable col-md-1 col-xs-2 text-center"
+                                    <th st-sort="Attachments" class="st-sortable col-md-1 col-xs-1 text-center"
                                         ng-cloak><i class="fa fa-fw fa-paperclip"></i></th>
-                                    <th class="st-nosort text-right col-md-2 col-xs-3"
+                                    <th st-sort="IsPublished" class="st-sortable text-right col-md-2 col-xs-2"
+                                        ng-cloak>{{ mc.translate('COLLECTIONS.PUBLISHED') }}</th>
+                                    <th class="st-nosort text-right col-md-2 col-xs-2"
                                         ng-cloak>{{ mc.translate('ACTION') }}</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 {% verbatim %}
                                 <tr ng-repeat="row in collectionsCollection">
+                                    <td ng-cloak>{{ row.Date.date | GMT:'DD-MM-YYYY HH:mm' }}</td>
+                                    <td ng-cloak>{{ row.CreatedBy.Name }}</td>
                                     <td ng-cloak>{{ row.Name }}</td>
                                     <td class="text-center"><i class="fa fa-fw fa-paperclip" ng-if="row.Attachments.length"></i></td>
+                                    <td ng-cloak class="text-right">
+                                        <label class="label label-success tag-label" ng-show="{{ row.IsPublished }}">{{ 'YES' | translate }}</label>
+                                        <label class="label label-danger tag-label" ng-hide="{{ row.IsPublished }}">{{ 'NO' | translate }}</label>
+                                    </td>
                                     <td>
                                         <div class="pull-right">
                                             <button type="button" ng-click="showCollection(row.Id, 'beertechInfo')"
@@ -45,7 +57,7 @@
                                 </tr>
                                 {% endverbatim %}
                                 </tbody>
-                                <tfoot ng-show="collectionsCollection.length > 10">
+                                <tfoot ng-show="collections.collections().length > 10">
                                     <tr>
                                         <td class="text-center" st-pagination="" st-items-by-page="10" colspan="3">
                                         </td>
@@ -63,7 +75,7 @@
             <div class="panel panel-info cursor-pointer" ng-click="pageBack('maintenance')">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-xs-12 text-left big-button-text" ng-cloak>
+                        <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
                             {{ mc.translate('BACK') }}
                             <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                         </div>
