Fixed bug in date of maintenance / beertech to show maintenance date and not creation date.

--- a/src/AdministrationBundle/Resources/views/beertech/beertech_info.html.twig
+++ b/src/AdministrationBundle/Resources/views/beertech/beertech_info.html.twig
@@ -11,7 +11,7 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-2 col-xs-4" ng-cloak><label>{{ 'COLLECTIONS.DATE' | translate }}:</label></div>
-                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().CreatedAt.date | GMT:'DD-MM-YYYY HH:mm' }}</div>
+                <div class="col-md-10 col-xs-8" ng-cloak>{{ collections.collection().Date.date | GMT:'DD-MM-YYYY HH:mm' }}</div>
             </div>
         </div>
         <div class="form-group">
