Bug fix for DS_Collections missing in javascript. (packet log)

--- a/src/AdministrationBundle/Resources/views/packetlog/log.html.twig
+++ b/src/AdministrationBundle/Resources/views/packetlog/log.html.twig
@@ -99,5 +99,6 @@
 {% block javascripts %}
     <script src="{{ asset('bundles/app/js/app/controllers/logCtrl.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/logs.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/app/datasets/collections.js') }}"></script>
 {% endblock %}
 
