--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -28,7 +28,7 @@ html {
 
 body {
     position: relative;
-    font: 1.25em Arial, Helvetica, sans-serif;
+    font: 1.25em Helvetica, sans-serif;
 }
 
 .page {
